<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zero"
        android:id="@+id/button0"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dot"
        android:id="@+id/buttonDot"
        android:layout_alignTop="@+id/button0"
        android:layout_toRightOf="@+id/button0"
        android:layout_toEndOf="@+id/button0" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonEquals"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@+id/buttonDot"
        android:layout_toEndOf="@+id/buttonDot"
        android:text="@string/equals" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/one"
        android:id="@+id/button1"
        android:layout_above="@+id/button0"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/plus"
        android:id="@+id/buttonPlus"
        android:layout_above="@+id/buttonEquals"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/three"
        android:id="@+id/button3"
        android:layout_above="@+id/buttonDot"
        android:layout_toLeftOf="@+id/buttonPlus"
        android:layout_toStartOf="@+id/buttonPlus" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/two"
        android:id="@+id/button2"
        android:layout_alignTop="@+id/button3"
        android:layout_toLeftOf="@+id/buttonEquals"
        android:layout_toStartOf="@+id/buttonEquals" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/four"
        android:id="@+id/button7"
        android:layout_above="@+id/button1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/seven"
        android:id="@+id/button7"
        android:layout_alignTop="@+id/button7"
        android:layout_toLeftOf="@+id/buttonAC"
        android:layout_toStartOf="@+id/buttonAC" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ac"
        android:id="@+id/buttonAC"
        android:layout_above="@+id/button7"
        android:layout_toLeftOf="@+id/button7"
        android:layout_toStartOf="@+id/button7" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/five"
        android:id="@+id/buttonAC"
        android:layout_above="@+id/button1"
        android:layout_toRightOf="@+id/button1"
        android:layout_toEndOf="@+id/button1" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eight"
        android:id="@+id/button7"
        android:layout_above="@+id/buttonAC"
        android:layout_alignLeft="@+id/buttonAC"
        android:layout_alignStart="@+id/buttonAC" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/six"
        android:id="@+id/button6"
        android:layout_above="@+id/buttonPlus"
        android:layout_toRightOf="@+id/button2"
        android:layout_toEndOf="@+id/button2" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nine"
        android:id="@+id/button9"
        android:layout_alignTop="@+id/buttonMultiply"
        android:layout_toLeftOf="@+id/buttonMultiply"
        android:layout_toStartOf="@+id/buttonMultiply" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/minus"
        android:id="@+id/buttonMinus"
        android:layout_alignBottom="@+id/button6"
        android:layout_toRightOf="@+id/button6"
        android:layout_toEndOf="@+id/button6" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/multiply"
        android:id="@+id/buttonMultiply"
        android:layout_above="@+id/button6"
        android:layout_toRightOf="@+id/button6"
        android:layout_toEndOf="@+id/button6" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/divide"
        android:id="@+id/buttonDivide"
        android:layout_above="@+id/buttonMultiply"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/percent"
        android:id="@+id/buttonPercent"
        android:layout_alignBottom="@+id/buttonDivide"
        android:layout_toLeftOf="@+id/buttonDivide"
        android:layout_toStartOf="@+id/buttonDivide" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign"
        android:id="@+id/buttonSign"
        android:layout_alignTop="@+id/buttonPercent"
        android:layout_alignLeft="@+id/button7"
        android:layout_alignStart="@+id/button7" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result"
        android:id="@+id/result"
        android:textSize="40dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
